--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ aiofiles
 ffmpeg-python
 ffmpeg
 youtube_search
+youtube_search_python
 youtube-search-python==1.4.6
 yt-dlp==2023.2.17
 youtube-dl
@@ -31,6 +32,7 @@ countryinfo
 datetime
 pytz
 dnspython==2.3.0
+aiohttp
 python-math
 Pillow
 speedtest-cli
